--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,7 @@
 server:
+  servlet:
+    session:
+      tracking-modes: cookie
   error:
     whitelabel:
       enabled: false
@@ -16,10 +19,12 @@ spring:
       enabled: false
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         format_sql: true
+        default_batch_fetch_size: 100
+    open-in-view: false
 logging:
   level:
     com.maruhxn.boardserver: debug
