--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,3 +29,6 @@ logging:
   level:
     com.maruhxn.boardserver: debug
     org.hibernate.SQL: debug
+
+file:
+  upload_dir: C:/Users/asus/project/spring-board/board-server/upload/
