--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/spring-board
+    url: jdbc:mysql://localhost:3306/spring-board?rewriteBatchedStatements=true
     username: root
     password: 602057
   servlet:
