--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,11 @@ dependencies {
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
+    // Redis
+    implementation "org.springframework.boot:spring-boot-starter-data-redis"
+    // Session Store
+    implementation 'org.springframework.session:spring-session-data-redis'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
