--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,11 @@ server:
   servlet:
     session:
       tracking-modes: cookie
+      cookie:
+        path: /
+        name: SESSION
+        http-only: true
+        secure: false
   error:
     whitelabel:
       enabled: false
@@ -25,10 +30,19 @@ spring:
         format_sql: true
         default_batch_fetch_size: 100
     open-in-view: false
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      password:
+  session:
+    store-type: redis
+    redis:
+      namespace: board:session
+    timeout: 3600
 logging:
   level:
     com.maruhxn.boardserver: debug
     org.hibernate.SQL: debug
-
 file:
   upload_dir: C:/Users/asus/project/spring-board/board-server/upload/
