--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,6 +35,10 @@ spring:
       host: localhost
       port: 6379
       password:
+    web:
+      pageable:
+        default-page-size: 10
+        max-page-size: 10
   session:
     store-type: redis
     redis:
