--- a/build.gradle
+++ b/build.gradle
@@ -37,10 +37,13 @@ dependencies {
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
-    // Redis
-    implementation "org.springframework.boot:spring-boot-starter-data-redis"
-    // Session Store
-    implementation 'org.springframework.session:spring-session-data-redis'
+    // Spring Security
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    testImplementation 'org.springframework.security:spring-security-test'
+//    // Redis
+//    implementation "org.springframework.boot:spring-boot-starter-data-redis"
+//    // Session Store
+//    implementation 'org.springframework.session:spring-session-data-redis'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
