--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,26 +24,26 @@ spring:
       enabled: false
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
         format_sql: true
         default_batch_fetch_size: 100
     open-in-view: false
   data:
-    #    redis:
-    #      host: localhost
-    #      port: 6379
-    #      password:
+    redis:
+      host: localhost
+      port: 6379
+      password:
     web:
       pageable:
         default-page-size: 10
         max-page-size: 10
-  #  session:
-  #    store-type: redis
-  #    redis:
-  #      namespace: board:session
-  #    timeout: 3600
+  session:
+    store-type: redis
+    redis:
+      namespace: board:session
+    timeout: 3600
   web:
     resources:
       add-mappings: false
