--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -13,10 +13,12 @@ server:
 spring:
   config:
     activate:
-      on-profile: test
-  autoconfigure:
-    exclude:
-      - org.springframework.boot.autoconfigure.data.redis.RedisAutoConfiguration
+      on-profile: prod
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/spring-board?rewriteBatchedStatements=true
+    username: root
+    password: 602057
   servlet:
     multipart:
       max-file-size: 500MB
@@ -24,12 +26,27 @@ spring:
     console:
       enabled: false
   jpa:
+    hibernate:
+      ddl-auto: none
+    properties:
+      hibernate:
+        format_sql: true
+        default_batch_fetch_size: 100
     open-in-view: false
   data:
+    redis:
+      host: localhost
+      port: 6379
+      password:
     web:
       pageable:
         default-page-size: 10
         max-page-size: 10
+  session:
+    store-type: redis
+    redis:
+      namespace: board:session
+    timeout: 3600
   web:
     resources:
       add-mappings: false
@@ -37,7 +54,6 @@ spring:
     throw-exception-if-no-handler-found: true
 logging:
   level:
-    com.maruhxn.boardserver: debug
-    org.hibernate.SQL: debug
+    root: info
 file:
   upload_dir: C:/Users/asus/project/spring-board/board-server/upload/
