--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,57 +1,3 @@
-server:
-  servlet:
-    session:
-      tracking-modes: cookie
-      cookie:
-        path: /
-        name: SESSION
-        http-only: true
-        secure: false
-  error:
-    whitelabel:
-      enabled: false
 spring:
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/spring-board?rewriteBatchedStatements=true
-    username: root
-    password: 602057
-  servlet:
-    multipart:
-      max-file-size: 500MB
-  h2:
-    console:
-      enabled: false
-  jpa:
-    hibernate:
-      ddl-auto: update
-    properties:
-      hibernate:
-        format_sql: true
-        default_batch_fetch_size: 100
-    open-in-view: false
-  data:
-    redis:
-      host: localhost
-      port: 6379
-      password:
-    web:
-      pageable:
-        default-page-size: 10
-        max-page-size: 10
-  session:
-    store-type: redis
-    redis:
-      namespace: board:session
-    timeout: 3600
-  web:
-    resources:
-      add-mappings: false
-  mvc:
-    throw-exception-if-no-handler-found: true
-logging:
-  level:
-    com.maruhxn.boardserver: debug
-    org.hibernate.SQL: debug
-file:
-  upload_dir: C:/Users/asus/project/spring-board/board-server/upload/
+  profiles:
+    default: dev # 기본 환경 dev
