Fix - ec2 배포 환경에서 파일 경로 문제 해결

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -51,4 +51,4 @@ logging:
     com.maruhxn.boardserver: debug
     org.hibernate.SQL: debug
 file:
-  upload_dir: C:/Users/asus/project/spring-board/board-server/upload/
+  upload_dir: upload/
