--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - --character-set-server=utf8mb4
       - --collation-server=utf8mb4_unicode_ci
     ports:
-      - "3305:3306"
+      - "3306:3306"
     volumes:
       - ./data/mysql/:/var/lib/mysql
 
@@ -27,9 +27,7 @@ services:
 
   # Spring Boot application service
   spring-app:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: maruhan/spring-board:latest
     ports:
       - "8080:8080"
     depends_on:
