--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,6 @@ permissions:
 jobs:
   test-and-build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4.1.1
@@ -38,13 +37,11 @@ jobs:
           docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPO }}:latest .
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPO }}:latest
-
   cd-pipelines:
-    name: continuous deploy
     needs: build-docker-image
     runs-on: ubuntu-latest
     steps:
-      - name: Copy docker-compse.yml file via ssh password
+      - name: Copy docker-compose.yml file via ssh password
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.EC2_HOST }}
