--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,7 +59,7 @@ jobs:
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
           port: 22
-        run: |
+        script: |
           sudo docker rm -f $(docker ps -qa)
           sudo docker-compose up -d
           sudo docker image prune -f
