--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,20 +28,19 @@ jobs:
         run: |
           chmod +x ./gradlew
           ./gradlew clean build
-  docker:
-    needs: test-and-build
-    runs-on: ubuntu-latest
-    steps:
+
       - name: Docker Image Build
-        run: docker build -f Dockerfile -t ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPO }}:latest .
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPO }}:latest .
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Docker Image Push
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPO }}:latest
+
   cd-pipelines:
     needs: docker
     runs-on: ubuntu-latest
