--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,6 @@ jobs:
         run: |
           chmod +x ./gradlew
           ./gradlew clean build
-
       - name: Docker Image Build
         run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPO }}:latest .
 
@@ -42,7 +41,7 @@ jobs:
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPO }}:latest
 
   cd-pipelines:
-    needs: docker
+    needs: test-and-build
     runs-on: ubuntu-latest
     steps:
       - name: Copy docker-compose.yml file via ssh password
