--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -30,7 +30,7 @@ spring:
       enabled: false
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
         format_sql: true
@@ -46,6 +46,9 @@ spring:
       add-mappings: false
   mvc:
     throw-exception-if-no-handler-found: true
+  sql:
+    init:
+      mode: never
 logging:
   level:
     com.maruhxn.boardserver: debug
