Fix - schema.sql 오류 수정

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -11,6 +11,9 @@ server:
     whitelabel:
       enabled: false
 spring:
+  sql:
+    init:
+      mode: never
   config:
     activate:
       on-profile: test
